base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-uv-service
spec:
  selector:
    app: fastapi-uv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
